fix: active heart like overflow

--- a/blocks/button/__like/__like.css
+++ b/blocks/button/__like/__like.css
@@ -1,7 +1,7 @@
 .button__like{
   background: url('/images/like.svg') no-repeat center center;
   background-size: contain;
-  width: 25px;
+  width: 35px;
   height: 20px;
 }
 .button__like:hover{
